# aitrader

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/context/: agentic_merge.md  aitrader_subagent.md  coding_standards.md  git_mr_guidelines.md  l345_router.md  lsai_e2e.md  lsai_subagents.md  lsai_superagent.md  repo_overview.md  router.md
.cursor/rules/: router.mdc  schwab-quotes-only.mdc
.cursor/scripts/: bootstrap_portable.sh  build_agent_topics.py  build_agent_topics_index.py  build_reverse_index.py  build_router.py  copy_template.sh  fill_bootstrap_tables.py  generate_l345_topics.py  refresh_l345_router.sh  run_cursor_keywords.sh  topic_frequency.py  topic_utils.py
src/aitrader/: __init__.py  __main__.py  agent_rsi.py  cli.py  env.py  progress.py  universe.py  workspace.py
src/aitrader/config/: historical_news_sources.yaml  news_feeds.yaml  (+1 more)
tests/: test_agent_rsi.py  test_backtest.py  test_band_calibration.py  test_bs_put_pricing.py  test_cluster.py  test_cot.py  test_csp_spread_advisor.py  test_csp_spread_pricing.py  test_cursor_extract.py  test_drift.py  test_env.py  test_gdelt.py  test_gdelt_gkg.py  test_keywords.py  test_learn_predict.py  test_llm_extract.py  test_macro_event_study.py  test_news.py  test_option_range_study.py  test_parallel_keywords.py  test_phase0_tiers.py  test_portfolio_backtest.py  test_predict.py  test_progress.py  test_schwab_policy.py  test_sentiment.py  test_stoplist.py  test_strategy_signals.py  test_train_optimize.py  test_universe.py  test_weekly_ladder.py  test_workspace.py  test_yahoo.py
(+37 files in other folders)
