[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitrader"
version = "0.1.0"
description = "Macro AI Trader — news-driven sector stock predictions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "yfinance>=0.2.40",
    "vaderSentiment>=3.3.2",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
aitrader = "aitrader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aitrader = ["config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
